# claude-model-router

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchmarks/: cost_model.py  live_bench.py
hooks/: subagent-router.py
model_router/: __init__.py  classifier.py  router.py
tests/: conftest.py  test_classifier.py  test_router.py
