[project]
name = "model-router"
version = "0.1.0"
description = "Cost-aware model routing for the Claude API"
requires-python = ">=3.10"
dependencies = ["anthropic>=0.115"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["model_router"]
